[gd_scene load_steps=2 format=3 uid="uid://csipd8ry6ydaf"]

[ext_resource type="Script" path="res://ui/player_ui.gd" id="1_hnmoh"]

[node name="PlayerUi" type="Node2D"]
script = ExtResource("1_hnmoh")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 1.0
offset_top = 26.0
offset_right = 153.0
offset_bottom = 50.0
step = 1.0
value = 50.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
offset_left = 48.0
offset_top = 25.0
offset_right = 109.0
offset_bottom = 51.0
text = "50 / 100"

[node name="PlayerLabel" type="Label" parent="."]
offset_right = 78.0
offset_bottom = 23.0
text = "Player: 1"
